[package]
name = "MIRU_kakao"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.24", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = "1.0.228"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
serde_json = "1.0.145"
urlencoding = "2.1.3"
